fixed link not redirecting to the correct page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <!--developer info-->
-  <div class="devinfo flex flex-row gap-4 absolute bottom-[170px] left-[50%] translate-x-[-50%] shadow-2xl rounded-[20px] pt-[50px] px-[45px] bg-white py-[50px] min-w-[730px] max-w-full ransition-all duration-300 ease-in-out">
+  <div class="devinfo flex flex-row gap-4 absolute bottom-[170px] left-[50%] translate-x-[-50%] shadow-2xl rounded-[20px] pt-[50px] px-[45px] bg-white py-[50px] min-w-[730px] max-w-full ransition-all duration-300 ease-in-out min-h-[430px] max-h-[450px] overflow-hidden">
             <div class="pfp pr-[50px]">
                 <img id="avatar" alt="Profile picture" width="117px" height="117px" class="rounded-full">
             </div>
@@ -69,7 +69,7 @@
                     </p>
                 </div>
 
-                <div class="handle text-blue-700 underline pb-[30px]" id="username">      
+                <div class="handle text-blue-700 underline pb-[10px]" id="username">      
                     
                 </div>
 
@@ -97,7 +97,7 @@
 
             </div>
 
-            <div class="socials grid grid-cols-2 gap-4 pt-[50px]">
+            <div class="socials grid grid-cols-2 gap-4 pt-[30px]">
                 <a href="" id="location" class="pointer-events-none text-[#7b92b6]">
                    
                 </a>
